kubernetes/apps/networking/traefik/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-server
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: traefik-old-public
      port: 8080
      targetPort: 8080
  externalName: 10.0.0.112
