kubernetes/apps/networking/traefik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legacy-server-public
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-authelia-com@kubernetescrd
    hajimari.io/enable: "false"
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &public_host "*.public.deangalvin.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legacy-server
                port:
                  number: 8080
  tls:
    - hosts:
        - *public_host
      secretName: deangalvin-com-production-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legacy-server-local
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-localonly@kubernetescrd,networking-authelia-com@kubernetescrd
    hajimari.io/icon: video-input-antenna
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: "*.local.deangalvin.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legacy-server
                port:
                  number: 8080
  tls:
    - hosts:
        - "*.local.deangalvin.com"
      secretName: deangalvin-com-production-tls
